Release v1.1.0-dev web music catalog
